[gd_scene load_steps=9 format=4 uid="uid://dredt2euhd4sp"]

[ext_resource type="TileSet" uid="uid://fb8aexdd1wvr" path="res://pipe_tile_set.tres" id="1_8mm7a"]
[ext_resource type="Texture2D" uid="uid://dwtwaudq33xr0" path="res://img/Gold_Border.png" id="1_gyfs4"]
[ext_resource type="Script" uid="uid://ddiho5nhh5yqw" path="res://block_handler.gd" id="3_d5x1h"]
[ext_resource type="PackedScene" uid="uid://7j3eteab11jn" path="res://t_block.tscn" id="4_7ycvg"]
[ext_resource type="Script" uid="uid://c2qcln1dk1qud" path="res://audio_stream_player.gd" id="4_d5x1h"]
[ext_resource type="PackedScene" uid="uid://bf646mwyn0i4x" path="res://i_block.tscn" id="5_wr18j"]
[ext_resource type="PackedScene" uid="uid://dw0ev5xhhfsic" path="res://s_block.tscn" id="6_qwutr"]
[ext_resource type="PackedScene" uid="uid://cx22xooipl3o6" path="res://box_block.tscn" id="7_671wp"]

[node name="Node2D" type="Node2D"]
texture_filter = 1

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAALAA4AAQAAAAAAADAKAA4AAQABAAAAAAAAAAMAAQABAAAAAFAAAAIAAQABAAAAAFAAAAEAAQABAAAAAFAAAAAAAQAAAAAAAFAAAAcAAQABAAAAAFAAAAYAAQABAAAAAFAAAAUAAQABAAAAAFAAAAQAAQABAAAAAFAAAAsAAQABAAAAAFAAAAoAAQABAAAAAFAAAAkAAQABAAAAAFAAAAgAAQABAAAAAFAAAA0AAQACAAAAAGAAAAwAAQABAAAAAFABAA4AAQABAAAAAAACAA4AAQABAAAAAAADAA4AAQABAAAAAAAEAA4AAQABAAAAAAAFAA4AAQABAAAAAAAGAA4AAQABAAAAAAAHAA4AAQABAAAAAAAIAA4AAQABAAAAAAAJAA4AAQABAAAAAAALAA0AAQACAAAAAFALAAwAAQABAAAAAGALAAsAAQABAAAAAGALAAoAAQABAAAAAGALAAkAAQABAAAAAGALAAgAAQABAAAAAGALAAcAAQABAAAAAGALAAYAAQABAAAAAGALAAUAAQABAAAAAGALAAQAAQABAAAAAGALAAMAAQABAAAAAGALAAIAAQADAAAAAAALAAEAAQABAAAAAGALAAAAAQABAAAAAGAAAA4AAQAAAAAAAGAMAAIAAQABAAAAAAD//wAAAQABAAAAAAAIAAwAAQAAAAAAAAAIAA0AAQAAAAAAAGAJAA0AAQACAAAAAAAKAA0AAQADAAAAAAABAA0AAQABAAAAAAACAAwAAQAAAAAAAAACAA0AAQAAAAAAADADAAwAAQABAAAAAAAEAAwAAQADAAAAAAAEAA0AAQADAAAAAAAFAAwAAQADAAAAAAAFAA0AAQADAAAAAAAGAAwAAQABAAAAAAAHAAwAAQABAAAAAAAEAAsAAQADAAAAAAAFAAsAAQADAAAAAAAGAAsAAQABAAAAAAAHAAsAAQABAAAAAAAIAAsAAQABAAAAAAAJAAsAAQAAAAAAAFAJAAwAAQAAAAAAADA=")
tile_set = ExtResource("1_8mm7a")
navigation_enabled = false

[node name="Frame" type="NinePatchRect" parent="."]
offset_left = -2.0
offset_top = -2.0
offset_right = 386.0
offset_bottom = 480.0
texture = ExtResource("1_gyfs4")
draw_center = false
region_rect = Rect2(0, 0, 40.41, 56.331)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="BlockHandler" type="Node2D" parent="."]
script = ExtResource("3_d5x1h")
blocks = Array[PackedScene]([ExtResource("4_7ycvg"), ExtResource("5_wr18j"), ExtResource("6_qwutr"), ExtResource("7_671wp")])

[node name="Timer" type="Timer" parent="BlockHandler"]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("4_d5x1h")

[connection signal="moved_down" from="BlockHandler" to="AudioStreamPlayer" method="_on_block_handler_moved_down"]
[connection signal="moved_left" from="BlockHandler" to="AudioStreamPlayer" method="_on_block_handler_moved_left"]
[connection signal="moved_right" from="BlockHandler" to="AudioStreamPlayer" method="_on_block_handler_moved_right"]
[connection signal="new_block" from="BlockHandler" to="AudioStreamPlayer" method="_on_block_handler_new_block"]
[connection signal="rotated" from="BlockHandler" to="AudioStreamPlayer" method="_on_block_handler_rotated"]
[connection signal="timeout" from="BlockHandler/Timer" to="BlockHandler" method="_on_timer_timeout"]
